# registration_demo

./: .gitignore  Cargo.toml  README.md
src/: main.rs  routes.rs  state.rs
src/handlers/: mod.rs  player.rs  register.rs
src/models/: player.rs
